[package]
name = "perlsub"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
envy = "0.4.2"
nix = { version = "0.24.2", default-features = false, features = ["process", "signal"] }
serde = { version = "1.0.140", features = ["derive"] }
sled = "0.34.7"
teloxide = { version = "0.10.1", default-features = false, features = ["ctrlc_handler", "rustls"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "rt", "process"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
